assets/style/global.css
@import url(catppuccin.css);

:root {
  --col-primary: var(--ctp-mocha-pink);
  --col-secondary: var(--ctp-mocha-red);
  --col-tetriary: var(--ctp-mocha-maroon);
  --col-bg: var(--ctp-mocha-base);
}

* {
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--col-bg);
}

h1 {
  color: var(--col-primary);
  font-size: 280%;
  text-align: center;
}

hr {
  color: var(--ctp-mocha-pink);
}

input[type=text],
select,
textarea {
  width: 100%;
  padding: 12px;
  background: var(--ctp-mocha-mantle);
  color: var(--col-secondary);
  border: 1px solid var(--ctp-mocha-crust);
  border-radius: 10px;
  resize: both;
}

label {
  padding: 12px 12px 12px 0;
  display: inline-block;
  color: var(--col-secondary);
}

input[type=submit] {
  background-color: var(--ctp-mocha-mantle);
  color: var(--col-secondary);
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  margin-left: 5%;
  float: left;
}

input[type=submit]:hover {
  background-color: #45a049;
}

.container {
  border-radius: 5px;
  background-color: var(--col-bg);
  padding: 20px;
}

.col-25 {
  float: left;
  text-align: left;
  width: 5%;
  margin-top: 6px;
}

.col-75 {
  float: left;
  width: 15%;
  margin-top: 6px;
}

.col-idk {
  float: left;
  width: 20%;
  margin-left: 5%;
  margin-top: 6px;
}

.col-idk2 {
  float: left;
  margin-left: 5%;
  margin-top: 6px;
}

.col-50 {
  float: left;
  width: 25%;
  display: inline;
  margin-top: 6px;
}

#pronouns-preview {
  float: left;
  left: 0px;
  padding-left: 10px;
  padding-top: 9px;
  color: var(--col-tetriary);
}

/* Clear floats after the columns */
.row::after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 700px) {

  .col-25,
  .col-75,
  input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
}

#loading-container {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--ctp-mocha-mantle);
}

#loading-text {
  vertical-align: middle;
  text-align: center;
  display: inline-block;
  color: var(--col-secondary);
  font-size: 69px;
}

